Preventing 'jumping' on forms page
git-svn-id: http://textpattern.googlecode.com/svn/development/4.x@4821 2fea6a4d-a838-0410-917b-93a53c48e9d2

--- a/textpattern/theme/classic/textpattern.css
+++ b/textpattern/theme/classic/textpattern.css
@@ -1274,6 +1274,11 @@ span.spinner {
 	margin-bottom: -.27272727272727em;
 }
 
+.txp-value-fixed {
+	display: inline-block;
+	padding: .27272727272727em 0;
+}
+
 /* deprecated @ 4.6 */
 .edit-label,
 .login-label {
